--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                     <h1 class="page-title">Regelgeving - projecten</h1>
                     <div class="user-profile">
                         <!-- Placeholder for user profile -->
-                        <button class="btn btn-primary">Nieuwe Taak</button>
                     </div>
                 </header>
 
@@ -239,6 +238,21 @@
                             </ul>
                             <div style="margin-top: 1rem;">
                                 <button class="btn btn-accent">Persoon Toevoegen</button>
+                            </div>
+                        </div>
+
+                        <div class="card" style="margin-top: 24px;">
+                            <h3>Instellingen</h3>
+                            <div style="display: flex; flex-direction: column; gap: 12px;">
+                                <label style="display: flex; align-items: center; gap: 8px;">
+                                    <input type="checkbox" checked> Activiteitenboom
+                                </label>
+                                <label style="display: flex; align-items: center; gap: 8px;">
+                                    <input type="checkbox" checked> PDF-bijlagen
+                                </label>
+                                <label style="display: flex; align-items: center; gap: 8px;">
+                                    <input type="checkbox" checked> Objectbeheer
+                                </label>
                             </div>
                         </div>
                     </div>
